# tmdb-async-movies

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CICD.yml  constraints.txt  release.yml  tests.yml
docs/: cli.md  conf.py  features.md  index.md  python-api.md  reference.md  requirements.txt  usage.md
movieparse/: cli.py  main.py  type_mapping.py  types.py
src/movieparse/: __init__.py  __main__.py  cli.py  main.py
src/tmdb_async_movies/: cli.py  main.py
src/tmdbasync/: __init__.py  cli.py  main.py
src/tmdbasyncmovies/: __init__.py  cli.py  main.py
tests/: 603_the_matrix.json  __init__.py  test_0_public.py  test_1_behavior.py  test_2_cli.py  test_cli.py  test_main.py  test_movieparse.py
