[tool.poetry]
name = "movieparse"
version = "0.1.2"
description = "movieparse is a lazy utility for fetching bulk movie data from TMDB."
authors = ["schuenemann"]
readme = "README.md"
repository = "https://github.com/tilschuenemann/movieparse"
keywords = ["metadata","movies","movie","analytics","tmbd","bulk", "tmdb-api","tmdb-movie"]
classifiers = ["Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"Intended Audience :: End Users/Desktop",
"Operating System :: MacOS",
"Operating System :: Microsoft :: Windows",
"Operating System :: POSIX :: Linux",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11"]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
pandas = "^1.5.1"
requests = "^2.28.1"
pathlib = "^1.0.1"

[tool.poetry.scripts]
movieparse = "movieparse.cli:main"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
pytest = "^7.2.0"
mock = "^4.0.3"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.mypy]
mypy_path = "movieparse/"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
