[tool.poetry]
name = "tmdb_async_movies"
version = "0.1.1"
description = "tmdb-async-movies is an asynchronous utility for fetching bulk movie data from TMDB using movie title and optionally release year."
authors = ["Til Schünemann <til.schuenemann@mailbox.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tilschuenemann/tmdb-async-movies"
repository = "https://github.com/tilschuenemann/tmdb-async-movies"
documentation = "https://tmdb-async-movies.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]
keywords = ["tmdb","api","movies","bulk","async","tmdb-api","tmdb-movie","movie","aiohttp","tmdb-async-movies"]

[tool.poetry.urls]
Changelog = "https://github.com/tilschuenemann/tmdb-async-movies/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.1"
pandas = "^1.5.1"
tqdm = "^4.64.1"
pathlib = "^1.0.1"
numpy = "^1.23.5"
aiohttp = "^3.8.3"
aiohttp-retry = "^2.8.3"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
sphinx-rtd-theme = "^1.1.1"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
types-requests = "^2.28.11.5"

[tool.black]
line-length=120

[tool.poetry.scripts]
tmdbasyncmovies = "tmdb_async_movies.cli:tmdbasyncmovies"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["tmdb_async_movies", "tests"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
